# termradar

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  smoke.yml
docs/: ARCHITECTURE.md  DATA_PROVIDERS.md  DEVELOPMENT.md  ROADMAP.md
docs/assets/: demo-quick.tape  demo-setup.tape
src/termradar/: __init__.py  __main__.py  cli.py  session.py
src/termradar/config/: __init__.py  storage.py
src/termradar/core/: __init__.py  airline.py  bearing.py  distance.py  engine.py  limits.py  location.py  models.py  rate_limit.py  timezone.py
src/termradar/providers/: __init__.py  adsbdb.py  aircraft.py  base.py  geocoding.py  routes.py
src/termradar/renderers/: __init__.py  bearing_display.py  formatting.py  location_display.py  radar_canvas.py  radar_coords.py  terminal.py  terminal_ui.py  terminal_view.py  time_display.py
tests/: fakes.py  test_adsbdb.py  test_aircraft.py  test_airline.py  test_bearing.py  test_bearing_display.py  test_cli.py  test_config.py  test_distance.py  test_engine.py  test_formatting.py  test_geocoding.py  test_location_display.py  test_models.py  test_radar_canvas.py  test_radar_coords.py  test_rate_limit.py  test_renderer.py  test_routes.py  test_session.py  test_terminal_ui.py  test_time_display.py  test_timezone.py
