[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termradar"
version = "0.3.1"
description = "See what's flying above you - live aircraft radar for your terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Anish Tipnis" }]
keywords = [
    "aircraft",
    "ads-b",
    "aviation",
    "flight-tracking",
    "radar",
    "terminal",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "httpx>=0.27",
    "platformdirs>=4.0",
    "rich>=13.7",
    "timezonefinder>=6.5",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
termradar = "termradar.cli:main"

[project.urls]
Homepage = "https://github.com/rusty3699/termradar"
Repository = "https://github.com/rusty3699/termradar"
Documentation = "https://github.com/rusty3699/termradar/tree/main/docs"
Issues = "https://github.com/rusty3699/termradar/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/termradar"]

[tool.hatch.build.targets.sdist]
include = ["src/termradar", "tests", "docs", "README.md", "CHANGELOG.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
